service worker: Add a mock SharedURLLoaderFactory in test utils

In some unit tests we need a ServiceWorkerScriptLoaderFactory, which
requires a SharedURLLoaderFactory. This CL adds a mock
SharedURLLoaderFactory. For now the factory always fails to start
because the current unit tests don't require the factory to work.

This makes ServiceWorkerProviderHostTest.AllowsServiceWorker pass.

Bug: 860380
Change-Id: I5063748b241c971576be7b76f670a129f4c7857b
Reviewed-on: https://chromium-review.googlesource.com/1128692
Commit-Queue: Kenichi Ishibashi <bashi@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573248}
Former-commit-id: 1d9e8349e76dc711f9e67e182568d3bc7add8182